--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.6.5",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "validator": "^11.1.0"
   }
 }
