--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "nodemon server.js",
     "start": "node server.js && npm start --prefix client",
     "client": "npm start --prefix client",
-    "heroku-postbuild": "cd client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "mongoose": "^5.6.5",
