--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.16.2",
     "mongoose": "^5.6.5",
     "nodemon": "^1.19.1",
+    "reactstrap": "^8.0.1",
     "validator": "^11.1.0"
   }
 }
