--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.16",
+    "@sentry/browser": "^5.9.1",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-calendar": "^2.19.0",
